<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dugme_slanje_poruke"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/kontakt_naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontakt_naslov"
            android:textColor="@color/tekst_boja"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />

        <TextView
            android:id="@+id/kontakt_tekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontakt_tekst"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kontakt_naslov"
            app:layout_constraintVertical_bias="0.168" />

        <Button
            android:id="@+id/idi_na_pocetnu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idi_na_pocetnu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.777" />

        <Button
            android:id="@+id/dugme_izlaz"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:text="@string/dugme_izlaz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.777" />

        <Button
            android:id="@+id/podijeliDugme"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/dugmePodijeli"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.885" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>