<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_10dp">

    <TextView
        android:id="@+id/prioriteti_naslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prior_tekst"
        android:textAlignment="center"
        android:textColor="@color/tekst_boja"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="295dp"
        android:layout_height="363dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioriteti_naslov"
        app:layout_constraintVertical_bias="0.116">


        <RadioButton
            android:id="@+id/prioriteti_medicinski_radnik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/med_radnik"
            android:textColor="@color/tekst_boja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioriteti_naslov"
            app:layout_constraintVertical_bias="0.119" />

        <RadioButton
            android:id="@+id/prioriteti_hronicni_bolesnik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hron_bolesnik"
            android:textColor="@color/tekst_boja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioriteti_medicinski_radnik"
            app:layout_constraintVertical_bias="0.048" />

        <RadioButton
            android:id="@+id/prioriteti_boravak_ugrozeni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boravak_dom"
            android:textColor="@color/tekst_boja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioriteti_hronicni_bolesnik"
            app:layout_constraintVertical_bias="0.057" />

        <RadioButton
            android:id="@+id/prioriteti_starije_lice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lice_starije_od_65"
            android:textColor="@color/tekst_boja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioriteti_boravak_ugrozeni"
            app:layout_constraintVertical_bias="0.073" />

        <RadioButton
            android:id="@+id/prioriteti_ne_pripadam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ne_pripadam"
            android:textColor="@color/tekst_boja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioriteti_starije_lice"
            app:layout_constraintVertical_bias="0.099" />

    </RadioGroup>

    <Button
        android:id="@+id/prioriteti_dugme_dalje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/dugme_sirina"
        android:text="@string/dalje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.232" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>