<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.skica.IzborVakcineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/izbor_vakcine1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_10dp"
        android:visibility="visible">

        <RadioGroup
            android:id="@+id/radioGroupVakcina"
            android:layout_width="331dp"
            android:layout_height="432dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/izbor_vakcine_naslov"
            app:layout_constraintVertical_bias="0.128">

            <RadioButton
                android:id="@+id/izbor_vakcine_moderna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moderna"
                android:textColor="@color/tekst_boja"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/izbor_vakcine_pfitzer"
                app:layout_constraintVertical_bias="0.215" />

            <RadioButton
                android:id="@+id/izbor_vakcine_pfitzer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pfitzer"
                android:textColor="@color/tekst_boja"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.218"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/izbor_vakcine_naslov"
                app:layout_constraintVertical_bias="0.095" />


            <RadioButton
                android:id="@+id/izbor_vakcine_sputnik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sputnik"
                android:textColor="@color/tekst_boja"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/izbor_vakcine_pfitzer"
                app:layout_constraintVertical_bias="0.215" />

            <RadioButton
                android:id="@+id/izbor_vakcine_astra_zeneca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="160dp"
                android:text="@string/astra_zeneca"
                android:textColor="@color/tekst_boja"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/izbor_vakcine_pfitzer"
                app:layout_constraintVertical_bias="0.087" />

        </RadioGroup>

        <TextView
            android:id="@+id/izbor_vakcine_naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vakcina_tekst"
            android:textAlignment="center"
            android:textColor="@color/tekst_boja"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078" />


        <Button
            android:id="@+id/izbor_vakcine_dugme_dalje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/dugme_sirina"
            android:text="@string/dalje"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupVakcina"
            app:layout_constraintVertical_bias="0.161" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>