<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:id="@+id/prepreka_pronadjena_tekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepreka_tekst"
            android:textAlignment="viewStart"
            android:textColor="@color/tekst_boja"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />


        <Button
            android:id="@+id/prepreka_pronadjena_dugme_pocetna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/dugme_sirina"
            android:text="@string/na_pocetnu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.817"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prepreka_pronadjena_tekst"
            app:layout_constraintVertical_bias="0.894" />

        <Button
            android:id="@+id/prepreka_pronadjena_dugme_izlaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/dugme_sirina"
            android:text="@string/izlaz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prepreka_pronadjena_tekst"
            app:layout_constraintVertical_bias="0.894" />
        


    </LinearLayout>

</layout>